@@ -78,6 +78,9 @@ Bug fixes
   a module name is identical to the package name. At least modules
   with templates can now have same name as their package.
 
+* Multiple skins and REST protocols could be registered under the same
+  name, but this is actually a conflict. Now give configuration
+  conflict error when someone tries this.
 
 Restructuring
 -------------
